--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,15 +14,20 @@
 			tools:targetApi="31">
 		<activity
 				android:name=".ui.AddNoteActivity"
-				android:exported="false"/>
-		<activity
-				android:name=".ui.MainActivity"
 				android:exported="true">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
-
 				<category android:name="android.intent.category.LAUNCHER"/>
+
 			</intent-filter>
+		</activity>
+		<activity
+				android:name=".ui.MainActivity"
+				android:exported="false">
+
+			<meta-data
+					android:name="android.app.lib_name"
+					android:value=""/>
 		</activity>
 	</application>
 
