--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
 			android:theme="@style/Theme.Notes"
 			tools:targetApi="31">
 		<activity
-				android:name=".ui.AddNoteActivity"
+				android:name=".ui.SplashActivity"
 				android:exported="true">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
